# bootstrap

./: .gitignore  AGENTS.md  LICENSE  README.md  bootstrap.Tests.ps1  bootstrap.bat  bootstrap.json  bootstrap.ps1  bootstrap.py  build.ps1  pyproject.toml  scoopfile.json  utils.ps1
.github/workflows/: release.yml  test.yml
docs/: index.md
docs/specs/: isolate_package_manager_venv.md
tests/: bootstrap.Tests.ps1  build.Tests.ps1  conftest.py  integration.Tests.ps1  linter.Tests.ps1  test_bootstrap.py  test_bootstrap_environment.py  test_create_virtual_environment.py  test_executor.py  test_pypi_source_parser.py  test_version.py  utils.Tests.ps1
tests/data/python3.10/: Pipfile  bootstrap.json  pyproject.toml
tests/data/python3.11/: Pipfile  bootstrap.json  pyproject.toml
tests/data/python3.12/: Pipfile  bootstrap.json  pyproject.toml
tests/python3.10/: Pipfile
tests/python3.11/: Pipfile  bootstrap.json
