[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "Test project for bootstrap"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pip-system-certs = ">=4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
